--- a/apps/rental-mobil/src/app/components/masuk/masuk.component.html
+++ b/apps/rental-mobil/src/app/components/masuk/masuk.component.html
@@ -10,14 +10,14 @@
 					</mat-card-header>
 					<mat-card-content fxLayout='column'>
 						<div fxFlex>
-							<mat-input-container class='full-width'>
+							<mat-form-field class='full-width'>
 								<input formControlName='username' matInput name='username' placeholder='Username' (keypress)='onKeyPress($event)' (paste)='onPaste($event)' required>
-							</mat-input-container>
+							</mat-form-field>
 						</div>
 						<div fxFlex>
-							<mat-input-container class='full-width'>
+							<mat-form-field class='full-width'>
 								<input formControlName='password' matInput name='password' type='password' placeholder='Password' (keypress)='onKeyPress($event)' (paste)='onPaste($event)' required>
-							</mat-input-container>
+							</mat-form-field>
 						</div>
 					</mat-card-content>
 					<mat-card-actions style='padding: 0 30px'>
